# Euwe-chess-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: archive-engine.yml  build-tuner.yml  clang-format.yml  clang-tidy.yml  cmake-multi-platform.yml  create-caches.yml  e2e-engine-tests.yml  run-tests.yml
chess-engine/: CMakeLists.txt  Main.cpp
chess-engine-lib/: BitBoard.h  BoardPosition.h  CMakeLists.txt  ConsoleColor.cpp  ConsoleColor.h  Engine.cpp  Engine.h  Eval.cpp  Eval.h  EvalParams.cpp  EvalParams.h  EvalT.cpp  EvalT.h  FrontEndOption.cpp  FrontEndOption.h  GameState.cpp  GameState.h  GameStateStringOps.cpp  IEngine.h  IFrontEnd.h  Math.h  Move.h  MoveOrderer.cpp  MoveOrderer.h  MoveOrdering.cpp  MoveOrdering.h  MoveSearcher.cpp  MoveSearcher.h  Perft.cpp  Piece.cpp  PieceControl.cpp  PieceControl.h  RangePatches.h  SEE.cpp  SearchStatistics.h  StackOfVectors.h  Syzygy.cpp  Syzygy.h  TTable.h  TimeManager.cpp  (+4 more)
chess-engine-lib/Pyrrhic/: tbconfig.h  tbprobe.cpp
ci/: .clang-tidy-ci  clang-tidy-parallel.sh  clang-tidy.sh
overlay-triplets/: x64-linux-msan.cmake
src/: CMakeLists.txt
src/chess-engine/: Main.cpp
src/chess-engine-lib/: BitBoard.cpp  BitBoard.h  BoardHash.cpp  CMakeLists.txt  Engine.cpp  Engine.h  Eval.cpp  Eval.h  EvalParams.cpp  EvalParams.h  GameState.cpp  IEngine.h  IFrontEnd.h  Macros.h  Move.cpp  MoveOrdering.h  MoveSearcher.cpp  MoveSearcher.h  PawnMasks.cpp  PieceControl.cpp  RangePatches.h  SEE.cpp  SEE.h  SearchInfo.h  Syzygy.cpp  TimeManager.cpp  TimeManager.h  UciFrontEnd.cpp  UciFrontEnd.h
src/chess-engine-lib/Pyrrhic/: tbchess.c  tbconfig.h  tbprobe.cpp
src/tests/: EvalJacobiansTests.cpp  HashingTests.cpp  MyGTest.h  PieceTests.cpp  SEETests.cpp  cpp.hint
src/tuner/: Main.cpp  Optimization.cpp  Optimization.h  PostProcessing.cpp  export_annotated_fens_from_pgns.py
tests/: BoardPositionTests.cpp  CMakeLists.txt  EvalJacobiansTests.cpp  FrontEndOptionTests.cpp  GameStateHelpersTests.cpp  GameStateTests.cpp  HashingTests.cpp  MoveGenerationTests.cpp  MoveTests.cpp  SEETests.cpp
toolchains/: build-msan-libcxx.sh  linux-clang-19-msan.cmake
tuner/: CMakeLists.txt  LoadPositions.cpp  LoadPositions.h  Main.cpp  Optimization.cpp  Optimization.h  PostProcessing.cpp  PreProcessing.cpp  ScoredPosition.h  Utilities.h
